# tiny3d-rs

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DIVERGENCES.md  LICENSE  README.md  RELEASING.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/tiny3d-core/: Cargo.toml
crates/tiny3d-core/examples/: fe_dbg.rs  saes_dbg.rs
crates/tiny3d-core/src/: eigen_solvers.rs  kdtree.rs  lib.rs  linalg.rs  random.rs  stdhash.rs  stdsort.rs
crates/tiny3d-core/src/geometry/: bounding_volume.rs  mesh.rs  mod.rs  orient_tangent_plane.rs  point_cloud.rs  rotation.rs  search_param.rs  voxel_grid.rs
crates/tiny3d-core/src/io/: mod.rs  ply.rs  xyz.rs
crates/tiny3d-core/src/registration/: checker.rs  estimation.rs  feature.rs  mod.rs  registration.rs
crates/tiny3d-core/tests/: ldlt_stages.rs  probe2_match.rs  probe_match.rs  saes_stages.rs
crates/tiny3d-py/: Cargo.toml  LICENSE  README.md  pyproject.toml
crates/tiny3d-py/python/tiny3d/: __init__.py  _build_config.py
crates/tiny3d-py/src/: fmtutil.rs  geometry.rs  io_mod.rs  lib.rs  registration.rs  utility.rs  vectors.rs
golden/: bench.py  differential.py  golden_gen.py  mutual_repro.py  ransac_lowoverlap.py  smoke.py  view_semantics.py
golden/data/: bounding_box.npz  estimation_direct.npz  evaluate.npz  feature_corres.npz  fpfh.npz  icp_p2l.npz  icp_p2p.npz  io_files.npz  io_nan.npz  io_ply.npz  io_xyz.npz  kdtree.npz  mesh_ops.npz  misc.npz  normals_default.npz  normals_hybrid.npz  normals_knn_fast.npz  normals_knn_slow.npz  normals_no_prior_SIGNFLIP.npz  normals_radius.npz  pcd_ops.npz  ransac_corres.npz  ransac_feature.npz  rotations.npz  transforms.npz  voxel_down.npz  voxelgrid.npz
